<!--
  ~ Copyright (C) 2018 Balázs Péter
  ~
  ~ This file is part of Alien Player 4X.
  ~
  ~ Alien Player 4X is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Alien Player 4X is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Alien Player 4X.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Alien Player 4X</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="econPhase">Economic Phase %d</string>
    <string name="buildHomeDefense">Home Defense</string>
    <string name="buildColonyDefense">Colony Defense</string>
    <string name="newFleets">New Fleets / Technologies</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="finish_game">Do you want to finish the current game?\nYour progress will be lost!</string>
    <string name="gameOver">...</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="new_game_text">New Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="saved_game_found_text">Saved Game</string>

    <string name="eliminate">Eliminate</string>
    <string name="eliminated">Eliminated</string>

    <string name="fleet_fleet_cp">CP: %d</string>
    <string name="fleetCp">Fleet CP: %d</string>
    <string name="techCp">Tech. CP: %d</string>
    <string name="defCp">Def. CP: %d</string>
    <string name="bank">Bank: %d</string>

    <string name="fleet_cp_result">Fleet CP: +%d</string>
    <string name="tech_cp_result">Technology CP: +%d</string>
    <string name="def_cp_result">Defense CP: +%d</string>
    <string name="extra_econ_result">Extra econ rolls: +%d</string>

    <string name="new_move">New Move Technology: %d</string>

    <string name="BASE_GAME">1 Player Alien Empire</string>
    <string name="BaseGameScenario">1 Player Alien Empire</string>
    <string name="SCENARIO_4">Space Empires Solitaire Scenario #4</string>
    <string name="Scenario4">Space Empires Solitaire Scenario #4</string>
    <string name="VP_SOLO_SCENARIO">Alien Player VP Rules (Solitaire)</string>
    <string name="VpSoloScenario">Alien Player VP Rules (Solitaire)</string>
    <string name="VP_2P_SCENARIO">Alien Player Co-op (2 Players)</string>
    <string name="Vp2pScenario">Alien Player Co-op (2 Players)</string>
    <string name="VP_3P_SCENARIO">Alien Player Co-op (3 Players)</string>
    <string name="Vp3pScenario">Alien Player Co-op (3 Players)</string>

    <string name="EASY">Easy</string>
    <string name="NORMAL">Normal</string>
    <string name="HARD">Hard</string>
    <string name="HARDER">Harder</string>
    <string name="REALLY_TOUGH">Really tough</string>
    <string name="GOOD_LUCK">Good Luck!</string>

    <string name="saved_game_details_text">%s\n%s difficulty, Turn %d</string>

    <string name="REGULAR_FLEET">Regular Fleet %s</string>
    <string name="RAIDER_FLEET">Raider Fleet %s</string>
    <string name="DEFENSE_FLEET">Defense Fleet %s</string>
    <string name="EXPANSION_FLEET">Expansion Fleet %s</string>
    <string name="EXTERMINATION_FLEET">Extermination Fleet %s</string>

    <string name="MOVE">Move: %d</string>
    <string name="SHIP_SIZE">Ship Size: %d</string>
    <string name="MINES">Mines: %d</string>
    <string name="ATTACK">Attack: %d</string>
    <string name="DEFENSE">Defense: %d</string>
    <string name="TACTICS">Tactics: %d</string>
    <string name="CLOAKING">Cloaking: %d</string>
    <string name="SCANNER">Scanner: %d</string>
    <string name="FIGHTERS">Fighters: %d</string>
    <string name="POINT_DEFENSE">Point Defense: %d</string>
    <string name="MINE_SWEEPER">Mine Sweep: %d</string>
    <string name="colonies">Colonies:%d </string>

    <string name="MOVE_label">Move:</string>
    <string name="SHIP_SIZE_label">Ship Size:</string>
    <string name="MINES_label">Mines:</string>
    <string name="ATTACK_label">Attack:</string>
    <string name="DEFENSE_label">Defense:</string>
    <string name="TACTICS_label">Tactics:</string>
    <string name="CLOAKING_label">Cloaking:</string>
    <string name="SCANNER_label">Scanner:</string>
    <string name="FIGHTERS_label">Fighters:</string>
    <string name="POINT_DEFENSE_label">Point Defense:</string>
    <string name="MINE_SWEEPER_label">Mine Sweeper:</string>
    <string name="colonies_label">Colonies:</string>

    <string name="RAIDER">[%d R]</string>
    <string name="CARRIER">[%d CV]</string>
    <string name="FIGHTER">[%d F]</string>
    <string name="BASE">[%d Base]</string>
    <string name="MINE">[%d Mine]</string>
    <string name="SCOUT">[%d SC]</string>
    <string name="DESTROYER">[%d DD]</string>
    <string name="CRUISER">[%d CA]</string>
    <string name="BATTLECRUISER">[%d BC]</string>
    <string name="BATTLESHIP">[%d BB]</string>
    <string name="DREADNAUGHT">[%d DN]</string>

    <!-- Scenari 4 -->

    <string name="SECURITY_FORCES">Security: %d</string>
    <string name="MILITARY_ACADEMY">Military academy: %d</string>
    <string name="BOARDING">Boarding: %d</string>
    <string name="GROUND_COMBAT">Ground :%d</string>

    <string name="SECURITY_FORCES_label">Security:</string>
    <string name="MILITARY_ACADEMY_label">Military Acad.:</string>
    <string name="BOARDING_label">Boarding:</string>
    <string name="GROUND_COMBAT_label">Ground:</string>

    <string name="TITAN">[%d Titan]</string>
    <string name="TRANSPORT">[%d T]</string>
    <string name="INFANTRY">[%d Inf]</string>
    <string name="MARINE">[%d Mar]</string>
    <string name="HEAVY_INFANTRY">[%d HI]</string>
    <string name="GRAV_ARMOR">[%d Grav]</string>
    <string name="BOARDING_SHIP">[%d BD]</string>

    <string name="setSeenLevels">Set Seen Technology Levels</string>

    <string name="first_combat">First Combat</string>
    <string name="pref_show_details">Show details</string>
    <string name="pref_show_details_summ">Show cp values and unrevealed fleet sizes</string>
    <string name="action_settings">Settings</string>
    <string name="no_new_fleets">No new fleets</string>
    <string name="no_new_techs">No new technologies</string>
    <string name="fleets_label">%d fleets</string>
    <string name="eliminate_player">Do you want to eliminate player %s</string>
    <string name="seen_technologies">Seen Technologies</string>

    <string name="version">Version 1.0</string>
    <string name="copyright">Copyright (C) 2018 Balázs Péter</string>
    <string name="smc_credits">Image of The Small Magellanic Cloud\nCredit: NASA, ESA, CXC and the University of Potsdam, JPL-Caltech, and STScI</string>
    <string name="license">This is a free software licensed under GPL 3.\nYou can view the license at\nhttps://www.gnu.org/licenses/gpl.txt</string>
    <string name="source_location">You can download the source files from\nhttps://github.com/NanocTheBuilder/AlienPlayer4X</string>
    <string name="licenses">View 3rd party licenses</string>
    
    <string-array name="first_combat_options_s4">
        <item>Combat above planet</item>[
    </string-array>

    <string-array name="first_combat_options_vp">
        <item>Combat above planet</item>
        <item>Enemy is NPA</item>
    </string-array>
</resources>
