<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/SE4XAppTheme"
    >

    <TextView
        android:id="@+id/fleet_cp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fleet_cp_result"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tech_cp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tech_cp_result"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fleet_cp_text" />

    <TextView
        android:id="@+id/def_cp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/def_cp_result"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tech_cp_text" />

    <TextView
        android:id="@+id/extra_econ_roll_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extra_econ_result"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/def_cp_text" />

    <TextView
        android:id="@+id/new_fleet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New fleet blabala"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/move_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_econ_roll_text"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/move_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Move: 1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_fleet_text" />

</android.support.constraint.ConstraintLayout>
