<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/SE4XAppTheme">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#44000000"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="#ffffff" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#44000000"
        app:layout_constraintBottom_toBottomOf="@id/bottom_space"
        app:layout_constraintEnd_toEndOf="@id/end_space"
        app:layout_constraintStart_toStartOf="@id/start_space"
        app:layout_constraintTop_toTopOf="@id/top_space" />>

    <Space
        android:id="@+id/top_space"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/resume_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/resume_text"
        style="@style/MainMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/resume"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/new_game_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_space" />

    <TextView
        android:id="@+id/new_game_text"
        style="@style/MainMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/new_game_text"
        app:layout_constraintBottom_toTopOf="@+id/settings_text"
        app:layout_constraintEnd_toStartOf="@id/end_space"
        app:layout_constraintStart_toEndOf="@id/start_space"
        app:layout_constraintTop_toBottomOf="@+id/resume_text" />

    <TextView
        android:id="@+id/settings_text"
        style="@style/MainMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/about_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_text" />

    <TextView
        android:id="@+id/about_text"
        style="@style/MainMenuItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/bottom_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text" />

    <Space
        android:id="@+id/bottom_space"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/about_text"
        app:layout_constraintTop_toBottomOf="@+id/about_text"
        tools:layout_editor_absoluteX="193dp" />

    <Space
        android:id="@+id/start_space"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/new_game_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/new_game_text"
        tools:layout_editor_absoluteY="289dp" />

    <Space
        android:id="@+id/end_space"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="@id/new_game_text"
        app:layout_constraintStart_toEndOf="@+id/new_game_text"
        tools:layout_editor_absoluteY="283dp" />

</android.support.constraint.ConstraintLayout>
